--- a/login_signup.html
+++ b/login_signup.html
@@ -1,4 +1,3 @@
-<!-- login_signup.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -25,14 +24,14 @@
         <input type="password" id="signupPassword" placeholder="비밀번호" required>
         <input type="password" id="signupPasswordConfirm" placeholder="비밀번호 확인" required>
         <button type="submit">회원가입</button>
-        <p>이미 회원이신가요? <span id="showLogin">로그인</span></p>
+        <p>이미 회원이신가요? <span id="showLoginFromSignup">로그인</span></p>
     </form>
 
     <form id="findForm" style="display:none;">
         <h2>비밀번호찾기</h2>
-        <input type="email" id="signupEmail" placeholder="이메일" required>
+        <input type="email" id="findEmail" placeholder="이메일" required>
         <button type="submit">비밀번호 찾기</button>
-        <p>다시 로그인하기  <span id="showLogin">로그인</span></p>
+        <p>다시 로그인하기 <span id="showLoginFromFind">로그인</span></p>
     </form>
 </div>
 
