--- a/login_signup.html
+++ b/login_signup.html
@@ -31,7 +31,7 @@
         <h2>비밀번호찾기</h2>
         <input type="email" id="findEmail" placeholder="이메일" required>
         <button type="submit">이메일 인증</button>
-        <input type="text" id="verificationCode" placeholder="인증번호"" required>
+        <input type="text" id="verificationCode" placeholder="인증번호" >
         <button type="button" id="verifyCodeBtn" >인증번호 확인</button>
         <p>다시 로그인하기 <span id="showLoginFromFind">로그인</span></p>
     </form>
