--- a/PBC/index.html
+++ b/PBC/index.html
@@ -23,14 +23,15 @@
         </div>
     </header>
 
-<!-- 아래 부분은 푸터 -->
-<footer>
-    <!-- 푸터 아이콘 버튼들 (PNG 이미지) -->
-    <button class="footer-icon" id="voiceIcon"><img src="voice.png" alt="Voice"></button>
-    <button class="footer-icon brightness-control" id="brightnessIcon"><img src="brightness.png" alt="Brightness"></button>
-    <button class="footer-icon" id="pinIcon"><img src="pin.png" alt="Pin"></button>
-    <button class="footer-icon" id="settingsIcon"><img src="settings.png" alt="Settings"></button>
-</footer>
+    <footer>
+        <!-- 기존 아이콘들 -->
+        <button class="footer-icon" id="voiceIcon"><img src="voice.png" alt="Voice"></button>
+        <button class="footer-icon brightness-control" id="brightnessIcon"><img src="brightness.png" alt="Brightness"></button>
+        <button class="footer-icon" id="pinIcon"><img src="pin.png" alt="Pin"></button>
+        <button class="footer-icon" id="settingsIcon"><img src="settings.png" alt="Settings"></button>
+        <!-- 복원 버튼 -->
+        <button class="footer-icon" id="restoreButton" style="display: none;"><img src="restore.png" alt="Restore"></button>
+    </footer>
 
     <!-- 밝기 조절 UI -->
     <div class="brightness-control-container">
