--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PictureBookCurator</title>
+  <title>로그인</title>
   <link rel="stylesheet" href="css/login_styles.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="icon" type="images/png" href="images/pbc_logo1.png">
@@ -21,7 +21,7 @@
     <h1>로그인</h1>
     <div class="input-box">
       <input type="email" id="loginEmail" name="loginEmail" placeholder="이메일" required>
-      <i class='bx bxs-user'></i>
+      <i class='bx bx-envelope'></i>
     </div>
     <div class="input-box">
       <input type="password" id="loginPassword" name="loginPassword" placeholder="비밀번호" required>
