--- a/web/Find_pw.html
+++ b/web/Find_pw.html
@@ -18,7 +18,7 @@
 <div class="wrapper">
 
     <form action="Find_pw_Check.jsp" method="post" id="findForm">
-        <h1>비밀번호 찾기</h1>
+        <h1>비밀번호 <span id="find">찾기</span></h1>
         <div class="input-box">
             <input type="text" id="findUsername" name="findUsername" placeholder="이름" required>
             <i class='bx bxs-user'></i>
