--- a/web/Reset_pw.html
+++ b/web/Reset_pw.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>비밀번호 재설정</title>
-<!--    <link rel="stylesheet" href="css/login_styles.css">-->
     <link rel="stylesheet" href="css/login_styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="images/png" href="images/pbc_logo1.png">
@@ -18,7 +17,7 @@
 
 <div class="wrapper">
     <form action="Reset_pw.jsp" method="post" id="findForm">
-        <h1>비밀번호 재설정</h1>
+        <h1>비밀번호 <span id="re">재설정</span></h1>
         <div class="input-box">
             <input type="password" id="resetPassword" name="resetPassword" placeholder="새 비밀번호" required>
             <i class='bx bxs-lock-alt'></i>
