--- a/web/Reset_pw.html
+++ b/web/Reset_pw.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>비밀번호 재설정</title>
-  <link rel="stylesheet" href="css/login_styles.css">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="icon" type="image/png" href="image/pbc_logo1.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>비밀번호 재설정</title>
+    <link rel="stylesheet" href="css/login_styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" type="images/png" href="images/pbc_logo1.png">
 </head>
 <body>
 <div class="image">
-  <a href="Reset_pw.html">
-    <img src="image/pbc_logo2.png" width="300px">
-  </a>
+    <a href="Reset_pw.html">
+        <img src="images/pbc_logo2.png" width="300px">
+    </a>
 </div>
 
 <div class="wrapper">
-  <form action="Reset_pw.jsp" method="post" id="findForm">
-    <h1>비밀번호 재설정</h1>
-    <div class="input-box">
-      <input type="password" id="resetPassword" name="resetPassword" placeholder="새 비밀번호" required>
-      <i class='bx bxs-lock-alt'></i>
-    </div>
-    <div class="input-box">
-      <input type="password" id="resetPasswordConfirm" name="resetPasswordConfirm" placeholder="비밀번호 확인" required>
-      <i class='bx bxs-lock-alt'></i>
-    </div>
-    <button type="submit" class="btn">비밀번호 재설정</button>
-  </form>
+    <form action="Reset_pw.jsp" method="post" id="findForm">
+        <h1>비밀번호 <span id="re">재설정</span></h1>
+        <div class="input-box">
+            <input type="password" id="resetPassword" name="resetPassword" placeholder="새 비밀번호" required>
+            <i class='bx bxs-lock-alt'></i>
+        </div>
+        <div class="input-box">
+            <input type="password" id="resetPasswordConfirm" name="resetPasswordConfirm" placeholder="비밀번호 확인" required>
+            <i class='bx bxs-lock-alt'></i>
+        </div>
+        <button type="submit" class="btn">비밀번호 재설정</button>
+    </form>
 </div>
 </body>
 </html>
