--- a/PBC/index.html
+++ b/PBC/index.html
@@ -22,7 +22,11 @@
         <button class="footer-icon" id="brightnessIcon"><img src="brightness.png" alt="Brightness"></button>
         <button class="footer-icon" id="pinIcon"><img src="pin.png" alt="Pin"></button>
         <button class="footer-icon" id="settingsIcon"><img src="settings.png" alt="Settings"></button>
-        <button class="footer-icon" id="restoreButton" style="display: none;"><img src="restore.png" alt="Restore"></button>
+        <!-- 복원 버튼 -->
+        <button class="footer-icon" id="restoreButton" style="display: none;">
+            X
+        </button>
+
     </footer>
 
     <!-- 밝기 조절 모달 -->
