--- a/image_View/index.html
+++ b/image_View/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PictureBook Curator</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css"> <!-- 스타일 시트 링크 -->
+    <script src="script.js" defer></script> <!-- 자바스크립트 파일 링크 -->
 </head>
 <body>
     <div class="container">
+        <!-- 헤더 섹션 -->
         <div class="header">
             <button class="back-button">
                 <img src="Icon/back.png" alt="Back">
@@ -20,81 +21,46 @@
         </div>
 
         <div id="content" class="content">
-            <!-- previous button -->
-            <button id="prev-btn" class="nav-button">
-                <img src="Icon/left.png" alt="Left Arrow" class="icon">
-            </button>
+            <!-- 슬라이드 섹션 -->
+            <div class="section">
+                <input type="radio" name="slide" id="slide01" checked>
+                <input type="radio" name="slide" id="slide02">
+                <input type="radio" name="slide" id="slide03">
 
-            <!-- 책 -->
-            <div id="book" class="book">
-                <!-- paper 1 -->
-                <div id="p1" class="paper">
-                    <div class="front">
-                        <div id="f1" class="front-content">
-                            <h1>Front 1</h1>
-                        </div>
-                    </div>
-                    <div class="back">
-                        <div id="b1" class="back-content">
-                            <h1>Back 1</h1>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- paper 2 -->
-                <div id="p2" class="paper">
-                    <div class="front">
-                        <div id="f2" class="front-content">
-                            <h1>Front 2</h1>
-                        </div>
-                    </div>
-                    <div class="back">
-                        <div id="b2" class="back-content">
-                            <h1>Back 2</h1>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- paper 3 -->
-                <div id="p3" class="paper">
-                    <div class="front">
-                        <div id="f3" class="front-content">
-                            <h1>Front 3</h1>
-                        </div>
-                    </div>
-                    <div class="back">
-                        <div id="b3" class="back-content">
-                            <h1>Back 3</h1>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- paper 4 -->
-                <div id="p4" class="paper">
-                    <div class="front">
-                        <div id="f4" class="front-content">
-                            <h1>Front 4</h1>
-                        </div>
-                    </div>
-                    <div class="back">
-                        <div id="b4" class="back-content">
-                            <h1>Back 4</h1>
-                        </div>
-                    </div>
+                <div class="slidewrap">
+                    <ul class="slidelist">
+                        <li>
+                            <a>
+                                <label for="slide03" class="left"></label>
+                                <div class="textbox"></div>
+                                <img src="./Image/dog.jpg" alt="Slide 1">
+                                <label for="slide02" class="right"></label>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <label for="slide01" class="left"></label>
+                                <div class="textbox"></div>
+                                <img src="./Image/testpicture.jpg" alt="Slide 2">
+                                <label for="slide03" class="right"></label>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <label for="slide02" class="left"></label>
+                                <div class="textbox"></div>
+                                <img src="./Image/fox.jpg" alt="Slide 3">
+                                <label for="slide01" class="right"></label>
+                            </a>
+                        </li> 
+                    </ul>
                 </div>
             </div>
-
-                        <!-- 자막 추가 -->
-            <div id="subtitle" class="subtitle">
-                자막이 여기에 표시됩니다.
-            </div>
-
-            <!-- Next Button -->
-            <button id="next-btn" class="nav-button">
-                <img src="Icon/right.png" alt="Right Arrow" class="icon">
-            </button>
+            <!-- 자막을 표시할 요소 -->
+            <div id="subtitle" class="subtitle">첫번째 슬라이드 입니다. 이 문장은 자막이 길어질 때 어떻게 보이는지 테스트하는 예시 문장입니다.</div>
         </div>
 
+        <!-- 푸터 섹션 -->
         <div class="footer">
             <!-- 처음으로 돌아가는 버튼 -->
             <button class="action-button">
@@ -115,12 +81,20 @@
                 </button>
             </div>
 
+            <!-- 페이지 정보 표시 및 수정 요소 -->
+            <div class="page-info">
+                <input type="number" id="current-page" value="1" min="1">
+                <span>/</span>
+                <span id="total-pages">3</span>
+            </div>
+
             <div class="volume-control">
                 <span class="volume-icon">
                     <img src="Icon/volume.png" alt="Volume" id="volume-icon">
                 </span>
                 <input type="range" min="0" max="100" value="50">
             </div>
+
         </div>
     </div>
 </body>
